[package]
name = "simple-redis"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
bytes = "1.6.0"
enum_dispatch = "0.3.13"
thiserror = "1.0.61"
tokio = { version = "1.38.0", features = ["rt", "rt-multi-thread", "macros", "net", "io-util"] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
typed_floats = "1.0.1"
tokio-util = { version = "0.7.11", features = ["codec"] }
tokio-stream = "0.1.15"
futures = "0.3.30"
tracing = "0.1.40"
dashmap = "5.5.3"
lazy_static = "1.4.0"
